# bwtocolor-streamlit

./: .gitattributes  .gitignore  GAN_UNET_Model.ipynb  README.md  app.py  model_creation.ipynb  pyproject.toml  requirements.txt
bwtocolor/: footer.py  model_utils.py  models.py  pytorchmodel.py  utils.py
model/: v2_gan
