[tool.poetry]
name = "bwtocolor"
version = "0.2.0"
description = ""
authors = ["Andre Wohnsland <Andre_Wohnsland@web.de>", "Johanna Bohn"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^0.82.0"
plotly-express = "^0.4.1"
pip-chill = "^1.0.1"
torch = "^1.9.0"
torchvision = "^0.10.0"
torchaudio = "^0.9.0"
scikit-image = "^0.18.2"
opencv-python-headless = "^4.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
